# FastMediaExplorer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  VERSIONING_POLICY.md
cert/: onenetworks-selfsign.cer
docs/: BUILD_AND_RUN.md  CURRENT_STATUS.md  PRODUCT_BACKLOG.md  PROJECT_OVERVIEW.md  TEST_CHECKLIST.md
include/fme/: app.hpp  duplicate_analysis.hpp  file_indexer.hpp  list_panel.hpp  media_file.hpp  media_query.hpp  thumb_service.hpp
release/: SHA256SUMS.txt
release/FastMediaExplorer-v0.2-alpha-win64/: LICENSE
release/FastMediaExplorer-v0.2-alpha-win64/docs/: ARCHITECTURE.md  BUILD_AND_RUN.md  ROADMAP.md  VERSION_DECISION.md
src/: main.cpp
src/core/: duplicate_analysis.cpp  file_indexer.cpp  media_query.cpp
src/ui/: list_panel.cpp  main_window.cpp  thumb_service.cpp
